--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,14 +2,11 @@
 body{
     color: #000000;
     margin: auto;
-    background-color: rgb(0, 0, 0);
+    background-color: #FFFFFF;
 }
 
 nav{
-    margin-bottom: 20px;
-    padding: 10px;
     background-color:rgba(255, 255, 255, 0.527) ;
-
 }
 .container{
     margin-top: 10px;
@@ -33,8 +30,6 @@ nav{
 }
 
 footer{
-
-    padding: 10px;
     background-color:rgba(255, 255, 255, 0.527) ;
 }
 
@@ -45,19 +40,3 @@ footer{
 .img_center{
     text-align: center;
 }
-
-
-@media screen and (min-width: 500px) {
-    .col-sm{
-       width: 100%;
-       height: auto; overflow: 
-       hidden; // clearing 
-    }
- }
-
- /*IMAGE SCALE*/
- @media screen and (min-width: 500px) and (max-width: 800px) {
-    .resize1{
-        width:80px;
-    }
- }
