--- a/css/stylesheet2.css
+++ b/css/stylesheet2.css
@@ -1,39 +1,15 @@
 /*MEDIA QUERIES*/
-
-.top_body{
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 10px;
-    padding: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 25px;
-    background-color: rgb(198, 197, 197);
-}
-
-.wrapper div {
-    width: 100%; 
-    min-height: 200px;
-    padding: 10px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    background-color: white;
- }
- #one { background-color: gray; }
- #two { background-color: white; }
-
-
-@media screen and (min-width: 400px) {
-    .wrapper div{
-       height: auto; overflow: hidden; // clearing 
+@media screen and (min-width: 500px) {
+    .col-sm{
+       width: 100%;
+       height: auto; overflow: 
+       hidden; // clearing 
     }
-    #one { width: 50%%; float: left; }
-    #two { margin-left: 200px; }
  }
 
-
-/* Small devices (landscape phones, 576px and up) 
-@media screen and (max-width: 410px) and (min-width: 400px){
-    top
-}*/
+ /*IMAGE SCALE*/
+ @media screen and (min-width: 500px) and (max-width: 800px) {
+    .resize1{
+        width:80px;
+    }
+ }
