media query for responsive

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,8 +11,17 @@ nav{
 
 .container{
     border-radius: 20px;
-    
 }
+
+.oneLeft{
+    width: 90%;
+    background-color:#FFFFFF; 
+}
+
+.onel, .twol, .threel{
+    background-color:#FFFFFF; 
+}
+    
 .col{
     border-radius: 10px;
 }
