changed stuff to the leeft side

--- a/css/stylesheet2.css
+++ b/css/stylesheet2.css
@@ -29,9 +29,9 @@
     .oneLeft{
         width: auto;
         display: flex;
+        margin-bottom: 20px;
     }
     .onel, .twol, .threel{
-        background-color: aqua;
         display: flex-grow;
         justify-content: flex-start;
 
