--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,6 +22,7 @@ nav{
 }
 
 .onel, .twol, .threel{
+    text-align: center;
     margin: 10px; 
     padding: 15px;
     border-radius: 10px;
@@ -49,6 +50,10 @@ footer{
     display: block;
     margin: auto;
     padding-top: 15px;
+}
+
+.thumbs{
+    margin: 5px;
 }
 
 .alignright {
