--- a/css/stylesheet2.css
+++ b/css/stylesheet2.css
@@ -25,10 +25,11 @@
     }
 }
 
+/*Responsive*/
 @media screen and (max-width: 1200px) {
     .oneLeft{
         width: auto;
-        display: flex;
+        display: center;
         margin-bottom: 20px;
     }
     .onel, .twol, .threel{
