--- a/css/stylesheet2.css
+++ b/css/stylesheet2.css
@@ -25,18 +25,28 @@
     }
 }
 
-/*Responsive*/
+/**/
 @media screen and (max-width: 1200px) {
+    .body{
+        width: 90%;
+        margin: auto;       
+        height: auto; overflow: 
+        hidden; // clearing 
+     }
     .oneLeft{
-        width: auto;
-        display: center;
+        width: 80%;
+        display: flex;
+        flex-wrap: row wrap;
+        margin-left: 5% !important;
+        margin-right: 5% !important;
         margin-bottom: 20px;
     }
-    .onel, .twol, .threel{
-        display: flex-grow;
+    .onel, .twol, .threel {
+        display: flex-shrink;
         justify-content: flex-start;
-
     }
 }
  
+
+/*https://medium.freecodecamp.org/even-more-about-how-flexbox-works-explained-in-big-colorful-animated-gifs-a5a74812b053*/
 
