--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,6 +9,11 @@ nav{
     background-color:rgba(255, 255, 255, 0.527) ;
 }
 
+.containerL{
+    background-color:#b4b4b4; 
+    border-radius: 20px;
+} 
+
 .container{
     background-color:#b4b4b4; 
     border-radius: 20px;
@@ -18,7 +23,7 @@ nav{
     width:auto; 
     height:auto;
     border-radius: 10px;
-    background-color:#f7f7f7; 
+    background-color:#b4b4b4; 
 }
 
 .onel, .twol, .threel{
