--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,12 +9,16 @@ nav{
     background-color:rgba(255, 255, 255, 0.527) ;
 }
 
-.containerL{
+.containerBottom{
+    margin-left: auto;
+    margin-right: auto;
     background-color:#b4b4b4; 
     border-radius: 20px;
 } 
 
 .container{
+    margin-left: auto;
+    margin-right: auto;
     background-color:#b4b4b4; 
     border-radius: 20px;
 }
@@ -51,6 +55,13 @@ nav{
 
 .col-sm, .col-sm-8, .col-sm-4, .col-sm-6{
     border-radius: 10px;
+    width: 100%;
+}
+
+.hcGraph{
+    padding: 5px; 
+    width: 100%; 
+    height: 500px !important;
 }
 
 footer{
